# mistral-ai-app

./: .env  README.md  app-next.py  app.py  app2.py  complete_model_cards.md  output.md  output2.md  pyproject.toml
